--- a/game/index.html
+++ b/game/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/level.js"></script>
   <script src="js/game.js"></script>
   <script src="js/player.js"></script>
@@ -16,10 +16,12 @@
 
 <body>
 
-  
-<canvas width=800px height=420px  id="game-canvas"></canvas>
-  <div class="parent">
-    <div id="player"  class="playerBloc"></div>
+  <div class="container-fluid ">
+    <div class="row ">
+      <div class="col-3  bg-danger " id="parent">
+        <canvas   id="game-canvas"></canvas>
+    </div>
+  </div>
 
   </div>
   </div>
